--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <p>copyright © 2022 qidamqolby</p>
         </div>
     </footer>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
